wazuh_managers/wazuh-master-sts.yaml
# Copyright (C) 2018 Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Wazuh master StatefulSet

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-manager-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-manager
      node-type: master
  serviceName: wazuh-cluster
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: wazuh-manager
        node-type: master
      name: wazuh-manager-master
    spec:
      volumes:
        - name: config
          configMap:
            name: wazuh-manager-master-conf   
      containers:
        - name: wazuh-manager
          image: 'wazuh/wazuh:3.11.3_7.5.2'
          resources:
            requests:
              cpu: 2
              memory: 1024Mi
            limits:
              cpu: 2
              memory: 2048Mi
          volumeMounts:
            - name: config
              mountPath: /wazuh-config-mount/etc/ossec.conf
              subPath: ossec.conf
              readOnly: true
            - name: wazuh-manager-master
              mountPath: /var/ossec/data              
          ports:
            - containerPort: 1515
              name: registration
            - containerPort: 1516
              name: cluster
            - containerPort: 55000
              name: api
  volumeClaimTemplates:
    - metadata:
        name: wazuh-manager-master
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp2-encrypted-retained
        resources:
          requests:
            storage: 50Gi
