wazuh_managers/wazuh-worker-0-sts.yaml
# Copyright (C) 2018 Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Wazuh worker StatefulSet: 0

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-manager-worker-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-manager
      node-type: worker
      sts-id: '0'
  serviceName: wazuh-cluster
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: wazuh-manager
        node-type: worker
        sts-id: '0'
      name: wazuh-manager-worker-0
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: sts-id
                      operator: In
                      values:
                        - '1'
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: config
          configMap:
            name: wazuh-manager-worker-0-conf
      containers:
        - name: wazuh-manager
          image: 'wazuh/wazuh:3.11.3_7.5.2'
          resources:
            requests:
              cpu: 2
              memory: 1024Mi
            limits:
              cpu: 2
              memory: 2048Mi
          volumeMounts:
            - name: config
              mountPath: /wazuh-config-mount/etc/ossec.conf
              subPath: ossec.conf
              readOnly: true
            - name: wazuh-manager-worker
              mountPath: /var/ossec/data
          ports:
            - containerPort: 1514
              name: agents-events
            - containerPort: 1516
              name: cluster
  volumeClaimTemplates:
    - metadata:
        name: wazuh-manager-worker
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: do-block-storage
        resources:
          requests:
            storage: 10Gi
