wazuh_managers/manager-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wazuh-manager
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - wazuh-master.bytelabs.ng
        - wazuh-master-reg.bytelabs.ng
      secretName: wazuh-master-tls
  rules:
    - host: wazuh-master.bytelabs.ng
      http:
        paths:
          - path: /
            backend:
              serviceName: wazuh-manager
              servicePort: 55000
    - host: wazuh-master-reg.bytelabs.ng
      http:
        paths:
          - path: /
            backend:
              serviceName: wazuh-manager
              servicePort: 1515
